--- a/Views/Themen/Details.cshtml
+++ b/Views/Themen/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SP.Models.Unterrichten.Themen
+﻿@model SP.Models.Unterrichten.Thema
 
 @{
     ViewData["Title"] = "Details";
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Bereich)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ThemeName)
+            @Html.DisplayNameFor(model => model.ThemaName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ThemeName)
+            @Html.DisplayFor(model => model.ThemaName)
         </dd>
     </dl>
 </div>
