--- a/Views/Themen/Edit.cshtml
+++ b/Views/Themen/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SP.Models.Unterrichten.Themen
+﻿@model SP.Models.Unterrichten.Thema
 
 @{
     ViewData["Title"] = "Edit";
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Bereich" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ThemeName" class="control-label"></label>
-                <input asp-for="ThemeName" class="form-control" />
-                <span asp-validation-for="ThemeName" class="text-danger"></span>
+                <label asp-for="ThemaName" class="control-label"></label>
+                <input asp-for="ThemaName" class="form-control" />
+                <span asp-validation-for="ThemaName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
