--- a/Views/Themen/Index.cshtml
+++ b/Views/Themen/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SP.Models.Unterrichten.Themen>
+﻿@model IEnumerable<SP.Models.Unterrichten.Thema>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Bereich)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ThemeName)
+                @Html.DisplayNameFor(model => model.ThemaName)
             </th>
             <th></th>
         </tr>
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Bereich)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ThemeName)
+                @Html.DisplayFor(modelItem => item.ThemaName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
