--- a/Views/Themen/Edit.cshtml
+++ b/Views/Themen/Edit.cshtml
@@ -15,7 +15,14 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Bereich" class="control-label"></label>
-                <select asp-for="Bereich" class="form-control"></select>
+                <select asp-for="Bereich" class="form-control">
+                    @foreach (var item in (List<SelectListItem>)ViewBag.Bereichs)
+                    {
+                        <option value="@item.Value">
+                            @item.Text
+                        </option>
+                    }
+                </select>
                 <span asp-validation-for="Bereich" class="text-danger"></span>
             </div>
             <div class="form-group">
