--- a/Views/Uebungs/Index.cshtml
+++ b/Views/Uebungs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SP.Models.Unterrichten.Unterthema>
+﻿@model IEnumerable<SP.Models.Unterrichten.Uebung>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,19 +13,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Themen.ThemaName)
+                @Html.DisplayNameFor(model => model.Unterthema)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NameUntertheme)
+                @Html.DisplayNameFor(model => model.Aufgabe)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Foto)
+                @Html.DisplayNameFor(model => model.Frame)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Beschreibung)
+                @Html.DisplayNameFor(model => model.Text)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Beispiele)
+                @Html.DisplayNameFor(model => model.Antworten)
             </th>
             <th></th>
         </tr>
@@ -34,19 +34,19 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Themen.Id)
+                @Html.DisplayFor(modelItem => item.Unterthema.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NameUntertheme)
+                @Html.DisplayFor(modelItem => item.Aufgabe)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Foto)
+                @Html.DisplayFor(modelItem => item.Frame)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Beschreibung)
+                @Html.DisplayFor(modelItem => item.Text)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Beispiele)
+                @Html.DisplayFor(modelItem => item.Antworten)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
