--- a/Views/Unterthemas/Edit.cshtml
+++ b/Views/Unterthemas/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="ThemenId" class="control-label"></label>
-                <select asp-for="ThemenId" class="form-control" asp-items="ViewBag.ThemenId"></select>
+                <select asp-for="ThemenId" class="form-control" asp-items="ViewBag.ThemaName"></select>
                 <span asp-validation-for="ThemenId" class="text-danger"></span>
             </div>
             <div class="form-group">
