--- a/Views/Unterthemas/Index.cshtml
+++ b/Views/Unterthemas/Index.cshtml
@@ -34,7 +34,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Themen.Id)
+                    @Html.DisplayFor(modelItem => item.Themen.ThemaName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NameUntertheme)
@@ -49,8 +49,8 @@
                 @Html.DisplayFor(modelItem => item.Beispiele)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
